fix(get_prompts): fix pagination and switch to left join
